# -ClipBox

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate-icon.mjs  release-notes.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_filter.rs  app_icon.rs  backup.rs  commands.rs  config.rs  hotkey.rs  image_store.rs  lib.rs  models.rs  notifications.rs  ocr.rs  search.rs  source_app.rs  state.rs  storage.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  paste.rs
src-tauri/src/db/: mod.rs  schema.rs
src/lib/: api.ts  chipLayout.ts  codeHighlight.ts  extractHighlights.ts  formatContent.ts  grouping.ts  i18n.svelte.ts  sensitiveMask.ts  sourceBadgeCache.ts  theme.ts  thumbCache.ts  types.ts  updater.ts  window.ts
src/lib/components/: CategoryFilter.svelte  ClipHighlights.svelte  ClipItem.svelte  ClipPreview.svelte  ClipThumb.svelte  CollapsibleBlock.svelte  CollapsibleSection.svelte  ContextMenu.svelte  HistoryPanel.svelte  HotkeyInput.svelte  MinimalCard.svelte  MinimalHistoryView.svelte  SearchBar.svelte  Select.svelte  SettingRow.svelte  Settings.svelte  SnippetTab.svelte  SourceBadge.svelte  TagFilter.svelte  Toggle.svelte  VirtualClipList.svelte
src/lib/locales/: en.ts  zh.ts
src/routes/: +page.svelte
