[package]
name = "clipbox"
version = "0.1.2"
description = "轻量剪贴板工具箱"
authors = ["仓库主任"]
edition = "2021"

[lib]
name = "clipbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
enigo = "0.6"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
sha2 = "0.10"
parking_lot = "0.12"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_DataExchange",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_Graphics_Gdi",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
] }
